[gd_scene load_steps=31 format=3 uid="uid://buw7jw1bnlxhw"]

[ext_resource type="PackedScene" path="res://player.tscn" id="1"]
[ext_resource type="PackedScene" path="res://floor.tscn" id="2"]
[ext_resource type="Script" path="res://restart.gd" id="3"]
[ext_resource type="Script" path="res://floor.gd" id="4"]
[ext_resource type="Script" path="res://main.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://d08qd7ptwion3" path="res://background.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://1ew74o8bmiuq" path="res://explosion/frame_10_delay-0.1s.png" id="6_usl1k"]
[ext_resource type="PackedScene" uid="uid://disybm51k53jg" path="res://block.tscn" id="7"]
[ext_resource type="Texture2D" uid="uid://dkbrpjegublwa" path="res://explosion/frame_11_delay-0.1s.png" id="7_5wlav"]
[ext_resource type="FontFile" uid="uid://djk4yxe5gfa74" path="res://Arial Unicode.ttf" id="8"]
[ext_resource type="Texture2D" uid="uid://dlrbjebj1pxpl" path="res://explosion/frame_12_delay-0.1s.png" id="8_dqtw6"]
[ext_resource type="PackedScene" uid="uid://bhlpkskc3oo1l" path="res://boom.tscn" id="9"]
[ext_resource type="Texture2D" uid="uid://10g1i7kkrfx2" path="res://explosion/frame_13_delay-0.1s.png" id="9_waugu"]
[ext_resource type="PackedScene" path="res://score.tscn" id="10"]
[ext_resource type="Texture2D" uid="uid://bcn4u5ogl2bv1" path="res://explosion/frame_14_delay-0.1s.png" id="10_k1ijw"]
[ext_resource type="Texture2D" uid="uid://b8c2ie55rkrwg" path="res://explosion/frame_15_delay-0.1s.png" id="11_cqon1"]
[ext_resource type="Texture2D" uid="uid://85laigrxyhcl" path="res://explosion/frame_16_delay-0.1s.png" id="12_7rnjo"]
[ext_resource type="Texture2D" uid="uid://c21p6v7ge4g4t" path="res://explosion/frame_17_delay-0.1s.png" id="13_5ax7s"]
[ext_resource type="Texture2D" uid="uid://cgekk43tc75k5" path="res://explosion/frame_18_delay-0.1s.png" id="14_f13qt"]
[ext_resource type="Texture2D" uid="uid://dmydw72u4500q" path="res://explosion/frame_02_delay-0.1s.png" id="15_0wi8y"]
[ext_resource type="Texture2D" uid="uid://da85d7yqlmqe2" path="res://explosion/frame_03_delay-0.1s.png" id="16_6l2kk"]
[ext_resource type="Texture2D" uid="uid://dsirokfcd7mjo" path="res://explosion/frame_04_delay-0.1s.png" id="17_7bemq"]
[ext_resource type="Texture2D" uid="uid://r4ed3gq6a85l" path="res://explosion/frame_05_delay-0.1s.png" id="18_x58se"]
[ext_resource type="Texture2D" uid="uid://dsmj3j7lqifsk" path="res://explosion/frame_06_delay-0.1s.png" id="19_fva2f"]
[ext_resource type="Texture2D" uid="uid://bvpwghkgjvxoj" path="res://explosion/frame_07_delay-0.1s.png" id="20_7nu16"]
[ext_resource type="Texture2D" uid="uid://dba6dp1ttlk6b" path="res://explosion/frame_08_delay-0.1s.png" id="21_hu8ym"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_usl1k")
}, {
"duration": 1.0,
"texture": ExtResource("7_5wlav")
}, {
"duration": 1.0,
"texture": ExtResource("8_dqtw6")
}, {
"duration": 1.0,
"texture": ExtResource("9_waugu")
}, {
"duration": 1.0,
"texture": ExtResource("10_k1ijw")
}, {
"duration": 1.0,
"texture": ExtResource("11_cqon1")
}, {
"duration": 1.0,
"texture": ExtResource("12_7rnjo")
}, {
"duration": 1.0,
"texture": ExtResource("13_5ax7s")
}, {
"duration": 1.0,
"texture": ExtResource("14_f13qt")
}, {
"duration": 1.0,
"texture": ExtResource("15_0wi8y")
}, {
"duration": 1.0,
"texture": ExtResource("16_6l2kk")
}, {
"duration": 1.0,
"texture": ExtResource("17_7bemq")
}, {
"duration": 1.0,
"texture": ExtResource("18_x58se")
}, {
"duration": 1.0,
"texture": ExtResource("19_fva2f")
}, {
"duration": 1.0,
"texture": ExtResource("20_7nu16")
}, {
"duration": 1.0,
"texture": ExtResource("21_hu8ym")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jouu"]
size = Vector2(150.5, 338.5)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("8")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("8")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="main" type="Node2D"]
script = ExtResource("5")

[node name="starting floor2" parent="." instance=ExtResource("2")]
z_index = 1
position = Vector2(256, 16)
scale = Vector2(1.23265, 1.00779)
script = ExtResource("4")

[node name="starting floor3" parent="." instance=ExtResource("2")]
z_index = 1
position = Vector2(249, -688)
rotation = 0.00349422
scale = Vector2(1.23265, 1.00779)
script = ExtResource("4")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(129, -296)

[node name="capy" parent="." instance=ExtResource("1")]
z_index = 1
position = Vector2(-151, -312)
collision_mask = 3

[node name="Node2D" parent="capy" instance=ExtResource("9")]
position = Vector2(82.0357, -6.64288)
scale = Vector2(1.50847, 1.42357)
sprite_frames = SubResource("1")
frame = 0
frame_progress = 0.0

[node name="Node2D" parent="." instance=ExtResource("6")]
visible = false
position = Vector2(-1.52588e-05, -3.05176e-05)

[node name="level_block" parent="." instance=ExtResource("7")]
z_index = 1
position = Vector2(-8, 0)
collision_layer = 3
collision_mask = 3

[node name="Node2D3" parent="." instance=ExtResource("6")]
position = Vector2(-2152, 208)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1712, -280)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_7jouu")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 13.0

[node name="Control" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="Label" type="Label" parent="Control"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = -384.0
offset_right = 246.0
offset_bottom = -326.0
theme_override_fonts/font = SubResource("3")
text = "You died :("

[node name="Button" type="Button" parent="Control"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 69.0
offset_top = -296.0
offset_right = 189.0
offset_bottom = -248.0
text = "Restart"
script = ExtResource("3")

[node name="score" type="Node2D" parent="."]
z_index = 1

[node name="Label2" type="Label" parent="score"]
offset_left = -72.0
offset_top = -568.0
offset_right = 320.0
offset_bottom = -455.0
scale = Vector2(1, 1.03487)
theme_override_fonts/font = SubResource("2")
text = "0"

[node name="points2" type="RayCast2D" parent="."]
position = Vector2(-216, -312)
target_position = Vector2(168, 0)
collision_mask = 8
collide_with_areas = true

[node name="score2" parent="." instance=ExtResource("10")]
position = Vector2(-512, 8)

[connection signal="dead" from="capy" to="." method="_on_capy_dead"]
[connection signal="dead" from="capy" to="starting floor2" method="_on_capy_dead"]
[connection signal="dead" from="capy" to="level_block" method="_on_capy_dead"]
[connection signal="animation_finished" from="capy/Node2D" to="." method="_on_Node2D_animation_finished"]
[connection signal="score" from="level_block" to="." method="_on_level_block_score"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="pressed" from="Control/Button" to="Control/Button" method="_on_Button_pressed"]
